Update 'ts4mzwuku-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:4aef48f7800a8172c2d026fa99defd2194c40af9@sha256:9dbc44e444b97bd0c571587862c7b1ab4fc54a241985d7565c5142e99a6f5516

--- a/components/ts4mzwuku-go/overlays/development/deployment-patch.yaml
+++ b/components/ts4mzwuku-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ts4mzwuku-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:4aef48f7800a8172c2d026fa99defd2194c40af9@sha256:9dbc44e444b97bd0c571587862c7b1ab4fc54a241985d7565c5142e99a6f5516
+          name: container-image
